git-svn-id: file:///var/svn/claro-catalog@565 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -403,6 +403,30 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 	color: blue;
 }
 
+.productDetails button.clear {
+	background: url(images/closeButton2.png);
+	width: 14px;
+	height: 14px;
+}
+.productDetails img.clear {
+	background:  url(images/closeButton2.png);
+	width: 14px;
+	height: 14px;
+	border: none;
+	
+}
+
+.productDetails img.derived {
+	background: url(images/closeButton1.png);
+	width: 14px;
+	height: 14px;
+}
+
+.productDetails img.clear:hover {
+	background: url(images/closeButton3.png);
+	width: 14px;
+	height: 14px;
+}
 
 /** Categories component */
 .categoryStyle {
