git-svn-id: file:///var/svn/claro-catalog@567 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -351,9 +351,10 @@ ol li .send {
 
 .productMasterDetail { margin: 20px; }
 
-.productMasterDetail table.ee-table-table { width: 100%; }
-.productMasterDetail table.ee-table-table table.product { width: 100%; cursor: pointer;}
-.productMasterDetail table.ee-table-table table.product td { border: none;}
+.productMasterDetail .cbg-RPContainer { background-color: white; }
+.productMasterDetail table.mainTable { width: 100%; }
+.productMasterDetail table.mainTable table.product { width: 100%; cursor: pointer;}
+.productMasterDetail table.mainTable table.product td { border: none;}
 
 
 
