git-svn-id: file:///var/svn/claro-catalog@583 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -369,7 +369,18 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 }
 
 .productDetails .productname {
+	font-size: large;
+}
+
+
+.productDetails .imagePrice {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.productDetails .productprice {
 	font-size: medium;
+	padding: 20px;
 }
 
 .productDetails .gwt-TabBarItem {
