--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -430,6 +430,21 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 	width: 100%;
 }
 
+.productDetails .categoryProperties {
+	width: 100%;
+}
+
+.itemPropertyValues {
+	width: 100%;
+}
+
+.itemPropertyValues .valueParent {
+	width: 100%;
+}
+.itemPropertyValues .valueParent .valueWidget {
+	width: 100%;
+}
+
 .productDetails .valueParent {
 	width: 100%;
 }
